--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
 
-    <h1><Hello !!! And good bye!!! And somethng else! Hello hello hello! 222 333 5555 7777 888</h1>
+    <h1>Hello !!! And good bye!!! And somethng else! Hello hello hello! 222 333 5555 7777 888</h1>
+    <h2>New feature</h2>
+    <h2>New feature 2</h2>
 
 
   </body>
